# hmf-source

./: Cargo.toml  README.adoc  TEMP copy.adoc  TEMP.adoc  index.html  taplo.toml
.github/workflows/: pages.yml  rust.yml  typos.yml
assets/: manifest.json  sw.js
configs/: HMF-2.hmf.ron  HMF-3.hmf.ron
doc/: ColostrumMilk.adoc  H242_-N.adoc  MatureMilk.SN2.adoc  README.adoc  TEMP.adoc
doc/10.1016/j.algal.2018.11.004/: README.adoc
doc/10.1016/j.foodchem.2004.10.049/: README.adoc
doc/10.1021/jf903048p/: ColostrumMilk.SN2.adoc  MatureMilk.adoc  README.adoc
doc/10.1038/sj.ejcn.1601470/: README.adoc  TEMP.adoc
src/: lib.rs  localization.rs  main.rs
src/app/: mod.rs
src/app/computers/: calculation.rs  composition.rs  mod.rs
src/app/menu/: load.rs  mod.rs
src/app/panes/: behavior.rs  mod.rs
src/app/panes/calculation/: control.rs  mod.rs  settings.rs  table.rs
src/app/widgets/: fatty_acid.rs  float.rs  mod.rs  new_fatty_acid.rs
src/app/windows/: about.rs
src/presets/: C70-Control.hmf.ron  C70-H2O2.hmf.ron  C70-NaCl.hmf.ron  CV-15.hmf.ron  HMF-1.hmf.ron  mod.rs
src/presets/10.1016/j.algal.2018.11.004/: CP-9.hmf.ipc  CS.hmf.ipc  CV-15.hmf.ipc  CV-395.hmf.ipc  CZ-30412.hmf.ipc  IG-2307.hmf.ipc  ISO-FJ.hmf.ipc  NL-2047.hmf.ipc  NO-IMET1.hmf.ipc  NS-537.hmf.ipc  PT-646.hmf.ipc  SS.hmf.ipc
src/presets/10.1016/j.algal.2018.11.004/temp/: CP-9.hmf.ipc  CS.hmf.ipc  CV-15.hmf.ipc  CV-395.hmf.ipc  CZ-30412.hmf.ipc  IG-2307.hmf.ipc  ISO-FJ.hmf.ipc  NL-2047.hmf.ipc  NO-IMET1.hmf.ipc  NS-537.hmf.ipc  PT-646.hmf.ipc  SS.hmf.ipc
src/presets/10.1021/jf903048p/: CMF-AF.hmf.ipc  CMF-AP.hmf.ipc  CMF-R.hmf.ipc  CMF.hmf.ipc  MMF-A.hmf.ipc  MMF.hmf.ipc
src/presets/10.1021/jf903048p/temp/: ACMF.hmf.ipc  AMMF.hmf.ipc  CMF-A.hmf.ipc  RCMF.hmf.ipc  _MatureMilkFat.ipc  _RCMF.ipc
src/presets/10.1038/sj.ejcn.1601470/: CMF.hmf.ipc  MMF.hmf.ipc  TMF.hmf.ipc
src/presets/ippras/: C70_H2O2.hmf.ipc  C70_NaCl.hmf.ipc  H242_-N.0.0.1.hmf.ipc  H242_-N.0.0.2.hmf.ipc  H242_-N.0.0.3.hmf.ipc  H242_-N.hmf.ipc
src/presets/trash/: CP-9.hmf.ron  CV-395.hmf.ron  CZ-30412.hmf.ron  H-242_-N 1.hmf.ron  H-242_-N 2.hmf.ron  H-242_-N 3.hmf.ron  H242_-N.0.0.1.hmf.ipc  H242_-N.0.0.2.hmf.ipc  H242_-N.0.0.3.hmf.ipc  HMF_1.hmf.ron  HMF_4.hmf.ron  ISO-FJ.hmf.ron
src/presets/trash/mature_milk/: mod.rs
src/special/: fatty_acid.rs
src/special/polars/: mod.rs
src/special/polars/column/: fatty_acid.rs
src/special/polars/expr/: fatty_acid.rs
src/special/polars/series/: fatty_acids.rs  identifier.rs  mod.rs
src/utils/: mod.rs
