[package]
name = "hmf"
version = "0.0.11"
edition = "2024"

[dependencies]
anyhow = "1.0.94"
eframe = { version = "0.29.1", features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
egui = "0.29.1"
egui-notify = "0.17.0"
egui-phosphor = "0.7.3"
egui_dnd = "0.10.0"
egui_ext = { git = "https://github.com/kgv/egui_ext" }
egui_extras = "0.29.1"
egui_table = "0.1.0"
egui_tiles = "0.10.1"
egui_tiles_ext = { git = "https://github.com/kgv/egui_tiles_ext" }
fatty_acid = { git = "https://github.com/kgv/fatty_acid" }
fluent = "0.16.1"
fluent_content = "0.0.5"
intl-memoizer = "0.5.2"
log = "0.4.22"
polars = { version = "0.45.1", default-features = false, features = [
    "abs",
    "concat_str",
    "cross_join",
    "dtype-categorical",
    "dtype-i8",
    "dtype-struct",
    "dtype-u8",
    "lazy",
    "list_any_all",
    "list_eval",
    "regex",
    "round_series",
    "serde-lazy",
    "strings",
    #
    "fmt_no_tty",
] }
ron = "0.8.1"
serde = { version = "1.0.216", features = ["derive", "std"] }
tracing = "0.1.41"
unic-langid = { version = "0.9.5", features = ["macros"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
poll-promise = { version = "0.3.0", features = ["tokio"] }
tokio = { version = "1.42.0", features = ["full"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# web
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2.15", features = ["js"] }
js-sys = "0.3.76"
poll-promise = { version = "0.3.0", features = ["web"] }
tracing-wasm = "0.2.1"
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4.49"
web-sys = { version = "0.3.76", features = ["FilePropertyBag"] }
# File, FilePropertyBag

# tracing-wasm = "0.2.1"
# wasm-bindgen-futures = "0.4.45"
# web-sys = "0.3.72"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
