[package]
name = "hmf"
version = "0.0.17"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
eframe = { version = "0.30.0", features = [
    "accesskit",
    "default_fonts",
    "glow",
    "persistence",
    "wayland",
] }
egui = "0.30.0"
egui-notify = "0.18.0"
egui-phosphor = "0.8.0"
# egui_commonmark = { version = "0.19.0", features = ["macros", "svg"] }
# egui_commonmark = { git = "https://github.com/lampsitter/egui_commonmark", features = [
#     "macros",
#     "pulldown_cmark",
#     "svg",
# ] }
egui_dnd = "0.11.0"
egui_ext = { git = "https://github.com/kgv/egui_ext", rev = "a186be5cd199a42389320bdd1b0cd466c6933a69" }
egui_extras = { version = "0.30.0", features = ["datepicker", "serde"] }
egui_table = "0.2.0"
egui_tiles = "0.11.0"
egui_tiles_ext = { git = "https://github.com/kgv/egui_tiles_ext", rev = "331e547fc3c94d4bd6367c8aaf8a6fc7b834f591" }
fluent = "0.16.1"
fluent_content = "0.0.5"
intl-memoizer = "0.5.2"
lipid = { git = "https://github.com/ippras/lipid" }
log = "0.4.25"
metadata = { git = "https://github.com/ippras/metadata", rev = "f5c76ecc21819c143638f7b61347379773f14d69" }
polars = { version = "0.46.0", default-features = false, features = [
    "cum_agg",
    "dtype-categorical",
    "dtype-i8",
    "dtype-struct",
    "dtype-u8",
    "fmt_no_tty",
    "lazy",
    "round_series",
    # "serde-lazy",
] }
polars_ext = { git = "https://github.com/kgv/polars_ext" }
re_ui = "0.21.0"
ron = "0.8.1"
semver = { version = "1.0.25", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive", "std"] }
tracing = "0.1.41"
unic-langid = { version = "0.9.5", features = ["macros"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
poll-promise = { version = "0.3.0", features = ["tokio"] }
tokio = { version = "1.43.0", features = ["full"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# web
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2.15", features = ["js"] }
js-sys = "0.3.77"
poll-promise = { version = "0.3.0", features = ["web"] }
tracing-wasm = "0.2.1"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = ["FilePropertyBag"] }
# File, FilePropertyBag

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
